# ray-tracing

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  color.h
.github/workflows/: build.yml
src/: CMakeLists.txt  camera.cc  camera.h  color.h  hittable.cc  hittable.h  hittable_list.cc  hittable_list.h  main.cc  material.cc  material.h  ray.h  sphere.cc  sphere.h  util.h  vec3.h
